# CMakeExperiments

./: .gitignore  README.md
src/boostpython/: CMakeLists.txt  package.xml
src/boostpython/include/: CvBoostConverter.hpp  Detector.h  PyBoostConfig.h  PyBoostConverter.hpp  PyBoostCvMatConverter.hpp  PyBoostDictConverter.hpp  PyBoostListConverter.hpp  PyBoostTupleConverter.hpp
src/boostpython/scripts/: cvtest.py  interopLoad.py  test.py  use_cpplib.py
src/boostpython/src/: conversion.cpp  conversion.h  examples.cpp  loadTest.cpp  mycpplib.cpp  pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp  pyboost_cv4_converter.cpp
src/node_design_demo/: CMakeLists.txt  package.xml
src/sample/: CMakeLists.txt  package.xml
src/sample/src/: Demo.cpp
